
SET(APPLICATION_NAME MapShow)

SET(HEADER_PATH ${PROJECT_SOURCE_DIR}/include/${APPLICATION_NAME})

SET(HEADERS 
		#${HEADER_PATH}/Exports
	)

SET(SOURCES 
                main.cpp
	)
	
INCLUDE_DIRECTORIES(
					${PROJECT_SOURCE_DIR}/include
					${PROJECT_SOURCE_DIR}/include/MapFramework
					${OPENSCENEGRAPH_INCLUDE_DIR}
					${osgVirtualAssembly_INCLUDE_DIR}
					#${CMAKE_CURRENT_BINARY_DIR}
				   )
					
LINK_DIRECTORIES(
				${OPENSCENEGRAPH_LIB_DIR}
				${PROJECT_BINARY_DIR}/lib
				${osgVirtualAssembly_LIB_DIR}
				)

IF(WIN32)
	MESSAGE(STATUS "WIN32")
	#SET(QT_USE_QTMAIN TRUE)
ENDIF(WIN32)

SET(FORMS_UI)
INCLUDE(${QT_USE_FILE})
ADD_DEFINITIONS(${QT_DEFINITIONS})
QT4_WRAP_CPP( HEADERS_MOC ${HEADERS} )
QT4_WRAP_UI( FORMS_HEADERS ${FORMS_UI} )

APPLICATION()

#QT APPLICATION
IF(WIN32)
	IF(CMAKE_BUILD_TYPE STREQUAL Release)
		MESSAGE(STATUS "Release Mode")
		#SET_TARGET_PROPERTIES(${APPLICATION_NAME} PROPERTIES WIN32_EXECUTABLE TRUE)
	ENDIF(CMAKE_BUILD_TYPE STREQUAL Release)
ENDIF(WIN32)

TARGET_LINK_LIBRARIES(${APPLICATION_NAME}
		debug MapFramework${CMAKE_DEBUG_PREFIX}				optimized MapFramework
		${QT_QTCORE_LIBRARY}
		${QT_QTGUI_LIBRARY}
		#${QT_QTMAIN_LIBRARY}
	)
